--- a/Pet-Pickup/src/app/header/new-case-dialog.html
+++ b/Pet-Pickup/src/app/header/new-case-dialog.html
@@ -1,1 +1,44 @@
-<h1 mat-dialog-title>Input Case Info Here</h1>
+<mat-card>
+<div>
+    <form>
+      <p>Name</p>
+      <div class="row">
+        <mat-form-field class="col-md-1">
+          <input
+            id="pre"
+            name="pre"
+            matInput
+            placeholder="Pre">
+        </mat-form-field>
+        <mat-form-field class="col-md-3">
+          <input
+            id="first"
+            name="first"
+            matInput
+            placeholder="First Name">
+        </mat-form-field>
+        <mat-form-field class="col-md-3">
+          <input
+            id="mid"
+            name="mid"
+            matInput
+            placeholder="Middle Name">
+        </mat-form-field>
+        <mat-form-field class="col-md-3">
+          <input
+            id="last"
+            name="last"
+            matInput
+            placeholder="Last Name">
+        </mat-form-field>
+        <mat-form-field class="col-md-1">
+          <input
+            id="suf"
+            name="suf"
+            matInput
+            placeholder="Suf">
+        </mat-form-field>
+      </div>
+    </form>
+  </div>
+</mat-card>
