Starting Basic Pet, Person, Case Services
 Initial Basic Pet, Person, Case Services working

--- a/Pet-Pickup/src/app/header/new-case-dialog.html
+++ b/Pet-Pickup/src/app/header/new-case-dialog.html
@@ -39,6 +39,14 @@
             matInput
             placeholder="Suf">
         </mat-form-field>
+        <mat-form-field class="col-md-3">
+          <input
+            id="petname"
+            name="petname"
+            formControlName="petname"
+            matInput
+            placeholder="Pet Name">
+        </mat-form-field>
       </div>
       <button type="submit" mat-button>Add</button>
     </form>
