--- a/Pet-Pickup/src/app/dashboard/dashboard.component.html
+++ b/Pet-Pickup/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,11 @@
 <table mat-table [dataSource]="dataSource">
   <ng-container matColumnDef="owner">
-    <th mat-header-cell *matHeaderCellDef>Owner</th>
-    <td mat-cell *matCellDef="let owner">{{ owner.name }}</td>
+  <th mat-header-cell *matHeaderCellDef>Owner</th>
+  <td mat-cell *matCellDef="let owner">{{ owner.person.name}}</td>
+</ng-container>
+  <ng-container matColumnDef="pet">
+    <th mat-header-cell *matHeaderCellDef>Pet</th>
+    <td mat-cell *matCellDef="let pet">{{ pet.pet.name }}</td>
   </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
