Implementing more controls
Added additional controls to the pet, and person forms. Also updated the services, and models for people and pets.

--- a/Pet-Pickup/src/app/header/header.component.css
+++ b/Pet-Pickup/src/app/header/header.component.css
@@ -10,4 +10,10 @@
 mat-divider.headerSplit {
   border-top: 3px solid #007BFF;
 }
-
+.formNav {
+  background-color: #FFFFFF;
+  height: 4%;
+  border-radius: 5px;
+  border-bottom: 2px;
+  margin-bottom: 10px;
+}
