--- a/Pet-Pickup/src/app/header/new-case-dialog.html
+++ b/Pet-Pickup/src/app/header/new-case-dialog.html
@@ -1,54 +1,379 @@
-<mat-card>
-<div>
-    <form [formGroup]="personForm" (ngSubmit)="onSubmit()">
-      <p>Name</p>
-      <div class="row">
-        <mat-form-field class="col-md-1">
-          <input
-            id="pre"
-            name="pre"
-            matInput
-            placeholder="Pre">
-        </mat-form-field>
-        <mat-form-field class="col-md-3">
-          <input
-            id="name"
-            name="name"
-            formControlName="name"
-            matInput
-            placeholder="First Name">
-        </mat-form-field>
-        <mat-form-field class="col-md-3">
-          <input
-            id="mid"
-            name="mid"
-            matInput
-            placeholder="Middle Name">
-        </mat-form-field>
-        <mat-form-field class="col-md-3">
-          <input
-            id="last"
-            name="last"
-            matInput
-            placeholder="Last Name">
-        </mat-form-field>
-        <mat-form-field class="col-md-1">
-          <input
-            id="suf"
-            name="suf"
-            matInput
-            placeholder="Suf">
-        </mat-form-field>
-        <mat-form-field class="col-md-3">
-          <input
-            id="petname"
-            name="petname"
-            formControlName="petname"
-            matInput
-            placeholder="Pet Name">
-        </mat-form-field>
+<mat-tab-group mat-align-tabs="center" animationDuration="0ms">
+  <mat-tab color="accent" label="OWNER">
+    <mat-card>
+      <div>
+        <form [formGroup]="caseForm" (ngSubmit)="onSubmit()">
+          <p class="font-weight-bold">Name</p>
+          <div class="row">
+            <mat-form-field class="col-md-1">
+              <input
+                id="pre"
+                name="pre"
+                matInput
+                formControlName="pre"
+                placeholder="Pre">
+            </mat-form-field>
+            <mat-form-field class="col-md-3">
+              <input
+                id="firstname"
+                name="firstname"
+                formControlName="firstname"
+                matInput
+                placeholder="First Name">
+            </mat-form-field>
+            <mat-form-field class="col-md-3">
+              <input
+                id="mid"
+                name="mid"
+                formControlName="mid"
+                matInput
+                placeholder="Middle Name">
+            </mat-form-field>
+            <mat-form-field class="col-md-3">
+              <input
+                id="last"
+                name="last"
+                formControlName="last"
+                matInput
+                placeholder="Last Name">
+            </mat-form-field>
+            <mat-form-field class="col-md-1">
+              <input
+                id="suf"
+                name="suf"
+                formControlName="suf"
+                matInput
+                placeholder="Suf">
+            </mat-form-field>
+          </div>
+          <p class="font-weight-bold">Address</p>
+          <div class="row">
+            <mat-form-field class="col-md-12">
+              <input
+                id="address"
+                name="address"
+                matInput
+                formControlName="address"
+                placeholder="Address"
+                type="text">
+            </mat-form-field>
+            <mat-form-field class="col-md-8">
+              <input
+                id="city"
+                name="city"
+                matInput
+                formControlName="city"
+                placeholder="City"
+                type="text">
+            </mat-form-field>
+            <mat-form-field class="col-md-2">
+              <input
+                id="state"
+                name="state"
+                matInput
+                formControlName="state"
+                placeholder="State"
+                type="text">
+            </mat-form-field>
+            <mat-form-field class="col-md-2">
+              <input
+                id="zip"
+                name="zip"
+                matInput
+                placeholder="Zip"
+                formControlName="zip"
+                type="text">
+            </mat-form-field>
+          </div>
+          <p class="font-weight-bold">Contact Info</p>
+          <div class="row">
+            <mat-form-field class="col-md-12">
+              <input
+                id="email"
+                name="email"
+                formControlName="email"
+                matInput
+                placeholder="Email"
+                type="email">
+            </mat-form-field>
+            <mat-form-field class="col-md-4">
+              <input
+                id="home"
+                name="home"
+                formControlName="home"
+                matInput
+                placeholder="Home Phone"
+                type="phone">
+            </mat-form-field>
+            <mat-form-field class="col-md-4">
+              <input
+                id="work"
+                name="work"
+                formControlName="work"
+                matInput
+                placeholder="Work Phone"
+                type="phone">
+            </mat-form-field>
+            <mat-form-field class="col-md-4">
+              <input
+                id="mobile"
+                name="mobile"
+                formControlName="mobile"
+                matInput
+                placeholder="Mobile Phone"
+                type="Phone">
+            </mat-form-field>
+          </div>
+        </form>
       </div>
-      <button type="submit" mat-button>Add</button>
-    </form>
-  </div>
-</mat-card>
+    </mat-card>
+  </mat-tab>
+  <mat-tab label="PET">
+    <mat-card>
+      <div>
+        <form [formGroup]="caseForm" (ngSubmit)="onSubmit()">
+          <p class="font-weight-bold">Name</p>
+          <div class="row">
+            <mat-form-field class="col-md-9">
+              <input
+                id="petname"
+                name="petname"
+                formControlName="petname"
+                matInput
+                placeholder="Pet Name">
+            </mat-form-field>
+          </div>
+          <p class="font-weight-bold">Details</p>
+          <div class="row">
+            <mat-form-field class="col-md-4">
+              <input
+                id="sex"
+                name="sex"
+                formControlName="sex"
+                matInput
+                placeholder="Sex"
+                type="text">
+            </mat-form-field>
+            <mat-form-field class="col-md-4">
+              <input
+                id="pettype"
+                name="pettype"
+                formControlName="pettype"
+                matInput
+                placeholder="Pet Type"
+                type="text">
+            </mat-form-field>
+            <mat-form-field class="col-md-4">
+              <input
+                id="breed"
+                name="breed"
+                formControlName="petbreed"
+                matInput
+                placeholder="breed"
+                type="text">
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-form-field class="col-md-4">
+              <input
+                id="color"
+                name="color"
+                formControlName="petcolor"
+                matInput
+                placeholder="Color"
+                type="text">
+            </mat-form-field>
+            <mat-form-field class="col-md-4">
+              <input
+                id="weight"
+                name="weight"
+                matInput
+                formControlName="petweight"
+                placeholder="Weight"
+                type="text">
+            </mat-form-field>
+          </div>
+          <p class="font-weight-bold">Age</p>
+          <div class="row">
+            <mat-form-field class="col-md-4">
+              <input
+                id="dob"
+                name="dob"
+                formControlName="petage"
+                matInput
+                placeholder="Date of Birth"
+                type="text">
+            </mat-form-field>
+            <mat-form-field class="col-md-4">
+              <input
+                id="dod"
+                name="dod"
+                formControlName="petdod"
+                matInput
+                placeholder="Date of Death"
+                type="text">
+            </mat-form-field>
+            <mat-form-field class="col-md-4">
+              <input
+                id="tod"
+                name="tod"
+                formControlName="pettod"
+                matInput
+                placeholder="Time of Death"
+                type="text">
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-form-field class="col-md-4">
+              <input
+                id="age"
+                name="age"
+                formControlName="petage"
+                matInput
+                placeholder="Age"
+                type="number">
+            </mat-form-field>
+          </div>
+        </form>
+      </div>
+    </mat-card>
+  </mat-tab>
+  <mat-tab label="DETAILS">
+    <mat-card>
+      <div>
+        <form [formGroup]="caseForm" (ngSubmit)="onSubmit()">
+          <p class="font-weight-bold">Cremation Details</p>
+          <div class="row">
+            <mat-form-field class="col-md-6">
+              <input
+                id="crematory"
+                name="crematory"
+                matInput
+                placeholder="Crematory">
+            </mat-form-field>
+            <mat-form-field class="col-md-6">
+              <input
+                id="status"
+                name="status"
+                matInput
+                placeholder="Status">
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-form-field class="col-md-6">
+              <input
+                id="cremationtype"
+                name="cremationtype"
+                matInput
+                placeholder="Cremation Type">
+            </mat-form-field>
+            <mat-form-field class="col-md-6">
+              <input
+                id="vetclinic"
+                name="vetclinic"
+                matInput
+                placeholder="Vet Clinic">
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-checkbox class="col-md-3"
+              id="printrequest"
+              name="printrequest"
+              matInput>
+              Paw print requested
+            </mat-checkbox>
+            <mat-checkbox class="col-md-3"
+              id="furrequest"
+              name="furrequest"
+              matInput>
+              Lock of fur requested
+            </mat-checkbox>
+          </div>
+          <p class="font-weight-bold">Return Information</p>
+          <div class="row">
+            <div class="col-md-3">
+              <button class="m-1 col-3 btn btn-sm btn-secondary">Vet</button>
+              <button class="m-1 col-3 btn btn-sm btn-secondary">Owner</button>
+              <button class="m-1 col-3 btn btn-sm btn-secondary">None</button>
+            </div>
+            <mat-form-field class="col-md-4">
+            <input
+              id="returnperson"
+              name="returnperson"
+              matInput
+              placeholder="Return Person">
+          </mat-form-field>
+            <mat-form-field class="col-md-5">
+              <input
+                id="returnplace"
+                name="returnplace"
+                matInput
+                placeholder="Return Place">
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-form-field class="col-md-5">
+              <input
+                id="returnphone"
+                name="returnphone"
+                matInput
+                placeholder="Return Phone">
+            </mat-form-field>
+            <mat-form-field class="col-md-7">
+              <input
+                id="returnaddress"
+                name="returnaddress"
+                matInput
+                placeholder="Return Address">
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-form-field class="col-md-7">
+              <input
+                id="returncity"
+                name="returncity"
+                matInput
+                placeholder="Return City">
+            </mat-form-field>
+            <mat-form-field class="col-md-2">
+              <input
+                id="returnstate"
+                name="returnstate"
+                matInput
+                placeholder="Return State">
+            </mat-form-field>
+            <mat-form-field class="col-md-3">
+              <input
+                id="returnzip"
+                name="returnzip"
+                matInput
+                placeholder="Return Zip">
+            </mat-form-field>
+          </div>
+          <p class="font-weight-bold">Notes</p>
+          <div class="row">
+            <mat-form-field class="col-md-12">
+              <textarea
+                id="notes"
+                name="notes"
+                matInput
+                placeholder="Notes">
+              </textarea>
+            </mat-form-field>
+          </div>
+          <div class="row d-flex justify-content-end">
+            <button class="btn btn-primary mr-3" type="submit" mat-button>Save</button>
+          </div>
+        </form>
+      </div>
+    </mat-card>
+  </mat-tab>
+</mat-tab-group>
+<!--
+<div class="formNav d-flex justify-content-md-center">
+  <span style="cursor:pointer; text-align:center" class="col-md-4">OWNER</span>
+  <span style="cursor:pointer; text-align:center" class="col-md-4">PET</span>
+  <span style="cursor:pointer; text-align:center" class="col-md-4">DETAILS</span>
+</div>
+-->
+
