--- a/Pet-Pickup/src/app/dashboard/dashboard.component.html
+++ b/Pet-Pickup/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,13 @@
   <h3 class="text-dark align-self-center">DASHBOARD</h3>
 </div>
 <mat-card class="ml-3 mr-3">
-  <table class="col-md-12" mat-table [dataSource]="dataSource">
+  <mat-form-field class="col-4">
+    <mat-select placeholder="All Clinics">
+      <mat-option value="Number one">Number one Vet Clinic</mat-option>
+      <mat-option value="Evergreen">Evergreen Pets</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <table class="col-md-12" mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let owner">{{ owner.person.id }}</td>
@@ -42,5 +48,5 @@
       <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
       <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
   </table>
-
+  <mat-paginator [pageSizeOptions]=[5,10]></mat-paginator>
 </mat-card>
