--- a/Pet-Pickup/src/app/dashboard/dashboard.component.html
+++ b/Pet-Pickup/src/app/dashboard/dashboard.component.html
@@ -31,19 +31,19 @@
     </ng-container>
     <ng-container matColumnDef="crematory">
       <th mat-header-cell *matHeaderCellDef>Crematory</th>
-      <td mat-cell *matCellDef="let pet">{{ pet.pet.petname }}</td>
+      <td mat-cell *matCellDef="let pet">{{ pet.cremationDetails.crematory }}</td>
     </ng-container>
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef>Type</th>
-      <td mat-cell *matCellDef="let pet">{{ pet.pet.petname }}</td>
+      <td mat-cell *matCellDef="let pet">{{ pet.cremationDetails.type }}</td>
     </ng-container>
     <ng-container matColumnDef="clinic">
       <th mat-header-cell *matHeaderCellDef>Clinic</th>
-      <td mat-cell *matCellDef="let pet">{{ pet.pet.petname }}</td>
+      <td mat-cell *matCellDef="let pet">{{ pet.cremationDetails.clinic }}</td>
     </ng-container>
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let pet">{{ pet.pet.petname }}</td>
+      <td mat-cell *matCellDef="let pet">{{ pet.cremationDetails.status }}</td>
     </ng-container>
       <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
       <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
