Owner button fills form
Return information for owner pre fills when button is clicked.

--- a/Pet-Pickup/src/app/header/new-case-dialog.html
+++ b/Pet-Pickup/src/app/header/new-case-dialog.html
@@ -300,9 +300,9 @@
           <p class="font-weight-bold">Return Information</p>
           <div class="row">
             <div class="col-md-3">
-              <button class="m-1 col-3 btn btn-sm btn-secondary">Vet</button>
-              <button class="m-1 col-3 btn btn-sm btn-secondary">Owner</button>
-              <button class="m-1 col-3 btn btn-sm btn-secondary">None</button>
+              <button type="button" class="m-1 col-3 btn btn-sm btn-secondary">Vet</button>
+              <button type="button" (click)="writeOwnerInfo()" class="m-1 col-3 btn btn-sm btn-secondary">Owner</button>
+              <button type="button" class="m-1 col-3 btn btn-sm btn-secondary">None</button>
             </div>
             <mat-form-field class="col-md-4">
             <input
