Form Details buttons working
New case form details buttons, now filling case information.

--- a/Pet-Pickup/src/app/dashboard/dashboard.component.html
+++ b/Pet-Pickup/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
       <mat-select (selectionChange)="filterVetClinic($event.value)" placeholder="Vet Clinic">
         <mat-option value="">All Clinics</mat-option>
         <mat-option value="Number one">Number one Vet Clinic</mat-option>
-        <mat-option value="Evergreen">Evergreen Pets</mat-option>
+        <mat-option value="Evergreen Pets">Evergreen Pets</mat-option>
       </mat-select>
     </mat-form-field>
   </form>
