--- a/Pet-Pickup/src/app/app.component.html
+++ b/Pet-Pickup/src/app/app.component.html
@@ -1,3 +1,18 @@
 <app-header></app-header>
 <app-dashboard></app-dashboard>
 <router-outlet></router-outlet>
+<div class="card col-12 ">
+    <div class=" bg-secondary btn-group btn-group-sm d-flex justify-content-center" role="group" aria-label="Basic example">
+      <button type="button" class="col-2 p-2 btn valid">Left</button>
+      <button type="button" class="col-2 ml-1 mr-1 btn valid">Middle</button>
+      <button type="button" class="col-2 p-2 btn valid">Right</button>
+    </div>
+  <div class="card-body">
+    <p class="card-text">
+      example
+    </p>
+  </div>
+</div>
+
+
+
