--- a/Pet-Pickup/src/app/app.component.css
+++ b/Pet-Pickup/src/app/app.component.css
@@ -1,3 +1,64 @@
 .valid {
   border-bottom: 2px solid #007BFF;
 }
+.backdrop{
+  background-color:rgba(0,0,0,0.6);
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100vh;
+}
+.modal-content {background: #BEE9F7;}
+
+.modal-background {background: #FFFFFF;}
+
+a.disabledLink {
+  color: #c9c9c9;
+  pointer-events: none;
+}
+
+
+
+.group{
+  position:relative;
+  margin-bottom:10px;
+}
+input{
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:300px;
+  border:none;
+  border-bottom:1px solid #757575;
+  background: #BEE9F7;
+}
+input:focus { outline:none; }
+
+.bar {
+  position:relative;
+  display:block;
+  width:300px;
+}
+.bar:before, .bar:after {
+  content:'';
+  height:3px;
+  width:0;
+  bottom:0px;
+  position:absolute;
+  background:#007BFF;
+  transition:0.15s ease all;
+  -moz-transition:0.15s ease all;
+  -webkit-transition:0.15s ease all;
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%;
+}
+
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
