New case form almost complete
Re did the new case form to get rid of the Material tabs.

Also fixed  the pagination bug that wouldn't sort pages, needed to be calling the paginator after view init.

--- a/Pet-Pickup/src/app/header/header.component.css
+++ b/Pet-Pickup/src/app/header/header.component.css
@@ -11,3 +11,14 @@ mat-divider.headerSplit {
   border-top: 3px solid #007BFF;
 }
 
+.modal-background {background: #FFFFFF;}
+
+.activeTab {
+  width: 100%;
+  border-bottom: 2px solid #007BFF;
+}
+
+a.disabledLink {
+  color: #c9c9c9;
+  pointer-events: none;
+}
